src/objects/LookupRollupSummaryLog_GLBL__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage_GLBL__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId_GLBL__c</fullName>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentObject_GLBL__c</fullName>
        <label>Parent Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentRecord_GLBL__c</fullName>
        <formula>HYPERLINK( ParentId_GLBL__c , &apos;Parent Record&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <label>Lookup Rollup Summary Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ErrorMessage_GLBL__c</columns>
        <columns>ParentId_GLBL__c</columns>
        <columns>ParentObject_GLBL__c</columns>
        <columns>ParentRecord_GLBL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Rollup Summary Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summary Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>